[project]
name = "rope-triton-kernel"
version = "0.1.0"
description = "High-performance implementation of Rotary Position Embedding (RoPE) using Triton for GPU acceleration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ryankert01"}
]
keywords = ["rope", "rotary-position-embedding", "triton", "gpu", "transformer", "attention", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "pytest>=7.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/ryankert01/rope-triton-kernel"
Repository = "https://github.com/ryankert01/rope-triton-kernel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "rope_triton.py",
    "rope_pytorch.py",
    "demo_attention.py",
    "example.py",
    "benchmark.py",
    "test_rope.py",
]

[dependency-groups]
dev = []
